deploy/jupyterlab-ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: jlab-ingress
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`jupyter.group03.ami.dedyn.io`)
      services:
        - kind: Service
          name: jlab-service
          port: 8888
  tls:
    certResolver: myresolver
